refactor: add path to index.ts file
