# src/routes/specifications.routes.ts
@@ -5,9 +5,6 @@ const specificationsRoutes = Router();
 
 const createSpecificationController = new CreateSpecificationController();
 
-specificationsRoutes.post(
-  '/specifications',
-  createSpecificationController.handle
-);
+specificationsRoutes.post('/', createSpecificationController.handle);
 
 export { specificationsRoutes };
